Update: Added Home screen and favorite coffees screen with logic

--- a/packages/coffee_repositories/pubspec.yaml
+++ b/packages/coffee_repositories/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   coffee_api:
     path: ../coffee_api
 
+  coffee_models:
+    path: ../coffee_models
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
