--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,19 @@ dependencies:
   go_router: ^5.1.1
   flutter_bloc: ^8.1.1
   provider: ^6.0.4
+  equatable: ^2.0.5
+  auto_size_text: ^3.0.0
+  transparent_image: ^2.0.0
 
   coffee_api:
     path: ./packages/coffee_api
   
   coffee_repositories:
     path: ./packages/coffee_repositories
+
+  coffee_models:
+    path: ./packages/coffee_models
+
 
 dev_dependencies:
   flutter_test:
