--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
     sdk: flutter
   bloc_test: ^9.1.0
   mocktail: ^0.3.0
+  mocktail_image_network: ^0.3.1
 
   flutter_lints: ^2.0.0
 
